--- a/02_SimpleMVC/src/person/config/jdbc.properties
+++ b/02_SimpleMVC/src/person/config/jdbc.properties
@@ -2,4 +2,4 @@ jdbc.sql.insert = INSERT INTO person(id, name, address) VALUES(SEQ_PERSON.NEXTVA
 jdbc.sql.delete = DELETE FROM person WHERE id = ?
 jdbc.sql.update = UPDATE person SET address = ? WHERE id = ?
 jdbc.sql.select = SELECT * FROM person ORDER BY id
-jdbc.sql.select2 = SELECT * FROM person WHERE id = ? ORDER BY id
+jdbc.sql.select2 = SELECT * FROM person WHERE id = ?
