update: cursor, trigger

--- a/05_BookMVC/src/config/jdbc.properties
+++ b/05_BookMVC/src/config/jdbc.properties
@@ -2,7 +2,7 @@ printBookAll =  SELECT * FROM tb_book
 registerBook = INSERT INTO tb_book VALUES(SEQ_TB_BOOK.NEXTVAL, ?, ?)
 sellBook = DELETE FROM tb_book WHERE BK_NO = ?
 registerMember = INSERT INTO tb_member(member_no, member_id, member_pwd, member_name) VALUES(SEQ_TB_MEMBER.NEXTVAL, ?, ?, ?)
-login = SELECT * FROM tb_member WHERE member_id = ? AND member_pwd = ?
+login = SELECT * FROM tb_member WHERE member_id = ? AND member_pwd = ? AND status = 'N'
 deleteMember = UPDATE tb_member SET status = ? WHERE member_id = ? AND member_pwd = ?
 rentBook = INSERT INTO tb_rent(rent_no, rent_mem_no, rent_book_no) VALUES(SEQ_TB_RENT.NEXTVAL, ?, ?)
 deleteRent = DELETE FROM tb_rent WHERE rent_no = ?
