--- a/YouTube/.classpath
+++ b/YouTube/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/WINDOWS.X64_193000_db_home/jdbc/lib/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="C:/oracle/WINDOWS.X64_193000_db_home/jdbc/lib/ojdbc8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
