--- a/YouTube/src/config/jdbc.properties
+++ b/YouTube/src/config/jdbc.properties
@@ -8,6 +8,17 @@ addVideo = INSERT INTO VIDEO(VIDEO_CODE, VIDEO_TITLE, VIDEO_URL, VIDEO_PHOTO, CA
 categoryList = SELECT * FROM CATEGORY
 updateVideo = UPDATE VIDEO SET VIDEO_TITLE = ? WHERE VIDEO_CODE = ?
 deleteVideo = DELETE FROM VIDEO WHERE VIDEO_CODE = ?
-videoAllList = SELECT * FROM VIDEO
-channelVideoList = SELECT * FROM VIDEO WHERE CHANNEL_CODE = ?
-viewVideo = SELECT * FROM VIDEO WHERE VIDEO_CODE = ?
+videoAllList = SELECT * FROM VIDEO JOIN CHANNEL USING(CHANNEL_CODE)
+channelVideoList = SELECT * FROM VIDEO JOIN CHANNEL USING(CHANNEL_CODE) WHERE CHANNEL_CODE = ?
+viewVideo = SELECT * FROM VIDEO JOIN CHANNEL USING(CHANNEL_CODE) WHERE VIDEO_CODE = ?
+addComment = INSERT INTO VIDEO_COMMENT(COMMENT_CODE, COMMENT_DESC, VIDEO_CODE, MEMBER_ID) VALUES(SEQ_VIDEO_COMMENT.NEXTVAL, ?, ?, ?)
+updateComment = UPDATE VIDEO_COMMENT SET COMMENT_DESC = ? WHERE COMMENT_CODE = ?
+deleteComment = DELETE FROM VIDEO_COMMENT WHERE COMMENT_CODE = ?
+videoCommentList = SELECT C.COMM_LIKE_CODE, C.COMM_LIKE_DATE, V.COMMENT_CODE, V.COMMENT_DESC, M.MEMBER_NICKNAME FROM COMMENT_LIKE C JOIN VIDEO_COMMENT V ON (C.COMMENT_CODE = V.COMMENT_CODE) JOIN MEMBER M ON (V.MEMBER_ID = V.MEMBER_ID) WHERE V.VIDEO_CODE = ?
+addCommentLike = INSERT INTO COMMENT_LIKE(COMM_LIKE_CODE, COMMENT_CODE, MEMBER_ID) VALUES(SEQ_COMMENT_LIKE.NEXTVAL, ?, ?)
+deleteCommentLike = DELETE FROM COMMENT_LIKE WHERE COMM_LIKE_CODE = ?
+addLike = INSERT INTO VIDEO_LIKE(V_LIKE_CODE, VIDEO_CODE, MEMBER_ID) VALUES(SEQ_VIDEO_LIKE.NEXTVAL, ?, ?)
+deleteLike = DELETE FROM VIDEO_LIKE WHERE V_LIKE_CODE = ?
+addSubscribe = INSERT INTO SUBSCRIBE(SUBS_CODE, MEMBER_ID, CHANNEL_CODE) VALUES(SEQ_SUBSCRIBE.NEXTVAL, ?, ?)
+deleteSubscribe = DELETE FROM SUBSCRIBE WHERE SUBS_CODE = ?
+mySubscribeList = SELECT C.CHANNEL_CODE, C.CHANNEL_NAME FROM SUBSCRIBE S JOIN CHANNEL C ON(S.CHANNEL_CODE = C.CHANNEL_CODE) WHERE S.MEMBER_ID = ?
